# agentIAgno

./: .gitignore  0.llm_call.py  1.1.researcher.py  1.3.own_tools.py  12_analista.py  14_onPlayground.py  21_pdf_agent.py  22_csv_agent.py  31_15set.py  IA_informa.txt  README.md  codific.py  notes.txt  pyproject.toml
